[DR-3042] Share common HTTP clients (#1462)
* [DR-3042] Sam ApiClients share a common OkHttpClient

Previously, we would create a new one for each request, which goes against OkHttpClient recommendations.

* BufferService APIs share a common Client

Drive-by: removed unused method.

* I think that RawlsClient can use common RestTemplate bean

* I think that BardClient can use common RestTemplate bean

Drive-by: looked like we were passing duplicate acceptable media types to our headers.
Refactored BardClientTest to use JUnit 5 and remove need for BardClient spy.

* TPS APIs share a common Client

Drive-by: consolidate API creation so that we're only setting the base path in one place.

* Oauth2ApiController can use RestTemplate bean

Refactored Oauth2ApiControllerTest to use JUnit 5 with context configuration (test slicing) to opt in the only controller we're testing.
We then must mock Oauth2ApiController's beans but the upside is faster test start-up.

* Drive-by: deduplicate acceptable headers in SamFixtures, DataRepoClient