@@ -3,8 +3,8 @@ package bio.terra.app.usermetrics;
 import bio.terra.app.configuration.UserMetricsConfiguration;
 import bio.terra.common.iam.AuthenticatedUserRequest;
 import com.google.common.annotations.VisibleForTesting;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.TimeUnit;
@@ -17,7 +17,6 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
 
@@ -41,13 +40,12 @@ public class BardClient {
   private static final String SYNC_PATH = "/api/syncProfile";
 
   @Autowired
-  public BardClient(UserMetricsConfiguration metricsConfig) {
-    this.restTemplate = new RestTemplate();
-    restTemplate.setRequestFactory(new HttpComponentsClientHttpRequestFactory());
+  public BardClient(UserMetricsConfiguration metricsConfig, RestTemplate restTemplate) {
+    this.restTemplate = restTemplate;
 
     this.headers = new HttpHeaders();
     headers.setContentType(MediaType.APPLICATION_JSON);
-    headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON, MediaType.APPLICATION_JSON));
+    headers.setAccept(List.of(MediaType.APPLICATION_JSON));
 
     int ttl =
         Objects.requireNonNullElse(
@@ -64,9 +62,8 @@ public class BardClient {
     syncUser(userReq);
     try {
       ResponseEntity<Void> eventCall =
-          getRestTemplate()
-              .exchange(
-                  getApiURL(), HttpMethod.POST, new HttpEntity<>(event, authedHeaders), Void.class);
+          restTemplate.exchange(
+              getApiUrl(), HttpMethod.POST, new HttpEntity<>(event, authedHeaders), Void.class);
       if (!eventCall.getStatusCode().is2xxSuccessful()) {
         logger.warn(
             "Error logging event {}%n{}",
@@ -101,12 +98,8 @@ public class BardClient {
     authedHeaders.setBearerAuth(userReq.getToken());
     try {
       ResponseEntity<Void> syncCall =
-          getRestTemplate()
-              .exchange(
-                  getSyncPathURL(),
-                  HttpMethod.POST,
-                  new HttpEntity<>(null, authedHeaders),
-                  Void.class);
+          restTemplate.exchange(
+              getSyncPathUrl(), HttpMethod.POST, new HttpEntity<>(null, authedHeaders), Void.class);
       if (!syncCall.getStatusCode().is2xxSuccessful()) {
         logger.warn(
             "Error calling sync for user {}%n{}",
@@ -122,17 +115,12 @@ public class BardClient {
   }
 
   @VisibleForTesting
-  RestTemplate getRestTemplate() {
-    return restTemplate;
-  }
-
-  @VisibleForTesting
-  String getApiURL() {
+  String getApiUrl() {
     return metricsConfig.getBardBasePath() + API_PATH;
   }
 
   @VisibleForTesting
-  String getSyncPathURL() {
+  String getSyncPathUrl() {
     return metricsConfig.getBardBasePath() + SYNC_PATH;
   }
 }
